--- a/Side4/CSS/fil.css
+++ b/Side4/CSS/fil.css
@@ -1,4 +1,4 @@
-@media screen and  (min-width: 1250px){
+@media screen and  (min-width: 1001px){
 body {
   height: 100%;
   margin: 0;
@@ -9,18 +9,13 @@ body {
 .Header-Image{
  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side4/Images/giphy.gif);
  height: 400px;
- width: 70%;
+ width: 100%;
  background-position: center;
  background-repeat:no-repeat;
  background-size: cover;
  position: relative;
  text-align: center;
  display: inline-block;
- border-radius: 50px;
- left: 15%;
- right: 15%;
- margin-bottom: 20px;
- margin-top: 20px;
 }
 
 .Main-Title{
@@ -84,7 +79,7 @@ li {
 
 .container{
   display: grid;
-  grid-template-rows: repeat(2, 1000px);
+  grid-template-rows: repeat(2, 900px);
   grid-template-columns: repeat(1fr 1fr 1fr); 
   column-rule: #130f40;
   column-rule-style: solid;
@@ -127,7 +122,7 @@ h2{
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-end: 2;
   width: 80%;
   margin-left: 10%; 
   margin-top: 40px;
@@ -164,15 +159,13 @@ align-items: center;
   zoom: 1.2;
 }
 
-.grid-img1{
-  height: 420px;
-  width: 340px;
-  margin-right: 30px;
-  margin-left: 25%;
+.grid-img1{ 
+  height: 55%;
+  width: 70%;
+  margin-left: 15%;
   border-style: solid;
   border-radius: 20px;
-  margin-top: 50%;
-  position: sticky;
+  margin-top: 30%;
 }
 
 .grid-img1:hover{
@@ -180,13 +173,13 @@ align-items: center;
 }
 
 .grid-img2{
-  height: 420px;
-  width: 340px;
-  margin-left: 25%;
-  position: relative;
+
+  height: 55%;
+  width: 70%;
+  margin-left: 15%;
   border-style: solid;
   border-radius: 20px;
-  margin-top: 50%;  
+  margin-top: 30%;
 }
 
 .grid-img2:hover{
@@ -194,7 +187,7 @@ align-items: center;
 }
 
 footer{
-  height: 200px;
+  height: 300px;
 }
 
 .footer-info{
@@ -207,7 +200,7 @@ footer{
 }
 }
 
-@media screen and (max-width: 1249px)
+@media screen and (max-width: 1000px)
 {
   body {
     height: 100%;
@@ -264,17 +257,17 @@ footer{
   
   .Navbar a{
     text-decoration: none;
-    font-size: 22px;
+    font-size: 13px;
     font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 700;
     color: dodgerblue;
     text-shadow: 7px 7px 12px black;
-    padding-left: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-right: 20px;
+    padding-left: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-right: 8px;
     letter-spacing: 4px;
-    margin: 30px 30px;
+    margin: 4px 4px;
   }
   
   .Navbar a:hover{
@@ -333,7 +326,7 @@ footer{
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 3;
-    grid-row-end: 3;
+    grid-row-end: 4;
     width: 80%;
     margin-left: 10%; 
     line-height: 1.7em;
@@ -346,7 +339,7 @@ footer{
   .grid4{
   grid-column-start: 1;
   grid-column-end: 3;
-  grid-row-start: 4;
+  grid-row-start: 3;
   grid-row-end: 4;
   align-items: center;
   
@@ -387,7 +380,6 @@ footer{
     margin-left: 15%;
     border-style: solid;
     border-radius: 20px;
-    margin-top: 10%; 
   }
   
   .grid-img2:hover{
@@ -408,8 +400,194 @@ footer{
   }
 }
 
-@media (max-width: 500px){
-.Navbar {
-
-}
+@media (max-width: 420px){
+  body {
+    height: 100%;
+    margin: 0;
+    background-image: linear-gradient(red,green,blue,white);
+  }
+  
+  
+  .Header-Image{
+   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side4/Images/giphy.gif);
+   height: 20vh;
+   width: 100%;
+   background-position: center;
+   background-repeat:no-repeat;
+   background-size: cover;
+   position: relative;
+   text-align: center;
+   display: inline-block;
+   margin-bottom: 20px;
+  }
+  
+  .Main-Title{
+    position: relative;
+    letter-spacing: 3px;
+    color: dodgerblue;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 8px;
+    letter-spacing: 5px;
+    text-shadow: 5px 5px 10px black;
+    top: 80%;
+  }
+  
+  .Main-Title:hover{
+    zoom: 1.145; 
+    color: rgb(57, 103, 255);
+    font-family: fantasy;
+  }
+  
+  .Navbar {
+    width: 100%;
+    line-height: 2.3em;
+    background-color: none;
+    text-align: center;
+    display: inline-block;
+    left: 0;
+    right: 0;
+    align-items: center;
+  }
+  
+  li {
+    list-style: none;
+    display: inline-block;
+  }
+  
+  .Navbar a{
+    text-decoration: none;
+    font-size: 12px;
+    font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 700;
+    color: dodgerblue;
+    text-shadow: 7px 7px 12px black;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    letter-spacing: 4px;
+    margin: 30px 30px;
+  }
+  
+  .Navbar a:hover{
+    background-image: linear-gradient(to bottom left, red, yellow);
+    color: #130f40;
+    border-radius: 20px;
+    border-style: solid;
+    transition: 0.2s;
+    opacity: 0.6;
+    color: rgb(57, 103, 255);
+    font-family: fantasy;
+    text-decoration: underline;
+  }
+  
+  .container{
+    display: grid;
+    grid-template-rows: repeat(1fr 1fr 1fr 1fr);
+    grid-template-columns: repeat(1fr 2fr 1fr);
+    row-gap: 5%;
+    text-align: justify;
+    font-size: 16px; 
+    letter-spacing: 2px;
+  }
+  
+  h2{
+    text-align: center;
+    font-size: 16px;
+    line-height: 1.3em;
+  }
+  
+  .grid1{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    width: 80%;
+    height: 100%;
+    margin-left: 10%; 
+    margin-top: 10%;
+    line-height: 1.7em;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 12px;
+    z-index: 1;
+    overflow: scroll;
+  }
+  
+  .grid2{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2;
+    align-items: center;
+  }
+  
+  .grid3{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 3;
+    width: 80%;
+    height: 100%;
+    margin-left: 10%; 
+    line-height: 1.7em;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 15px;
+    overflow: scroll;
+  }
+  
+  
+  .grid4{
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 4;
+  grid-row-end: 4;
+  align-items: center;
+  
+  }
+  
+  .grid1 a, .grid3 a{
+    color:rgb(26, 106, 255);
+    text-decoration: none;
+  }
+  
+  
+  .grid-img1{
+    height: 100%;
+    width: 80%;
+    margin-top: 10px;
+    margin-left: 10%;
+    border-style: solid;
+    border-radius: 20px;
+  }
+  
+  .grid-img1:hover{
+    zoom: 1.05;
+  }
+  
+  .grid-img2{
+    height: 100%;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 0px;
+    border-style: solid;
+    border-radius: 20px;
+  }
+  
+  .grid-img2:hover{
+    zoom: 1.05;
+  }
+  
+  footer{
+    height: 200px;
+    margin-top: 10%;
+  }
+  
+  .footer-info{
+    margin-top: 25px;
+    border-top: dotted 8px dodgerblue; 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
