--- a/Side5/CSS/fil.css
+++ b/Side5/CSS/fil.css
@@ -1,160 +1,665 @@
-body {
-  background-color: beige;
-  height: 100%;
-  margin: 0;
-}
+@media screen and (min-width: 1001px) {
 
-.Header-Image{
-  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/Nature.png);
-  height: 50vh;
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  display: inline-block;
-  text-align: center;
-}
- 
-
-.Tittel{
-  position: relative;
-  text-shadow: 5px 5px 10px black;
-  letter-spacing: 3px;
-  color:#c0392b;
-  font-size: 46px;
-  top: 20%;
-}
-
-.navbar {
-  width: 100%;
-  line-height: 100px;
-  background-color: #c0392b;
-  text-align: center;
-  display: inline-block;
-  align-items: center;
-}
-
-li {
-  list-style: none;
-  display: inline-block;
-}
-
-.navbar a{
-  text-decoration: none;
-  font-size: 18px;
-  font-family: Cambria;
-  font-weight: 500;
-  color: beige;
-  padding: 20px;
-  letter-spacing: 4px;
-  margin-left: 30px;
-  margin-right: 30px;
-   
-}
-
-.navbar a:hover{
-  background-color: white;
-  color: #130f40;
-  border-radius: 20px;
-  border-style: solid;
-}
-
-/*Main*/
-
-.grid1{
-  display: grid;  
-  grid-template-columns: 1fr 1fr 1fr;
-  height: 500px;
-  padding-top: 100px;
-}
-
-.Testing-image1,.Testing-image2 {
-  width: 50%;
-  margin-left: 25%;
-  height: 250px;
-  margin-top: 100px;
-}
-
-.grid2 {
-  width: 90%;
-  margin-left: 5%;
-  font-size: 25px;
-  padding: 0;
-}
-
-
-/*Footer*/
-
-footer {
-  margin-top: 300px;
-  background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
-  border-style: solid;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-}
-
-
-.Footer-info {
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  height: 450px;
-  text-align: center;
-  align-items: center;
-}
-
-.Links{
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  width: 20px;
-  row-gap: 20px;
-  margin-top: 10px;
-  line-height: 2em;
-  font-size: 35px;
-  padding-left: 20%;
+  body {
+    background-color: beige;
+    height: 100%;
+    margin: 0;
   }
-
-.Links a{
+  
+  .Header-Image{
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/Nature.png);
+    height: 50vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+  }
+   
+  
+  .Tittel{
+    position: relative;
+    text-shadow: 5px 5px 10px black;
+    letter-spacing: 3px;
+    color:#c0392b;
+    font-size: 46px;
+    top: 20%;
+  }
+  
+  .navbar {
+    width: 100%;
+    line-height: 100px;
+    background-color: #c0392b;
+    text-align: center;
+    display: inline-block;
+    align-items: center;
+  }
+  
+  li {
+    list-style: none;
+    display: inline-block;
+  }
+  
+  .navbar a{
+    text-decoration: none;
+    font-size: 18px;
+    font-family: Cambria;
+    font-weight: 500;
+    color: beige;
+    padding: 20px;
+    letter-spacing: 4px;
+    margin-left: 30px;
+    margin-right: 30px;
+     
+  }
+  
+  .navbar a:hover{
+    background-color: white;
+    color: #130f40;
+    border-radius: 20px;
+    border-style: solid;
+  }
+  
+  /*Main*/
+  
+  .Innhold{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  
+  .Før_test{
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: end;
+  
+  }
+  
+  .Tekst{
+    width: 100%;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: justify;
+    margin-top: 30%;
+    font-size: 25px;
+    color: #c0392b;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 100;
+  }
+  
+  .Tekst h2{
+    text-align: center;
+    color: #c0392b;
+    font-size: 34px;
+    margin-bottom: 60px;
+  }
+  
+  .Testing-image1 {
+    width: 70%;
+    margin-left: 15%;
+    height: 70%;
+    margin-top: 15%;
+    border: 2px #c0392b solid;
+    border-radius: 5px;
+  }
+  
+  .Testing-image2 {
+    width: 70%;
+    margin-left: 15%;
+    height: 70%;
+    margin-top: 15%;
+    border: 2px #c0392b solid;
+    border-radius: 5px;
+  }
+  
+  
+  .Etter_test {
+    display: grid;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: end;
+  }
+  
+  .Testing-image3 {
+    width: 70%;
+    margin-left: 15%;
+    height: 70%;
+    margin-top: 15%;
+    border: 2px #c0392b solid;
+    border-radius: 5px;
+  }
+  
+  .Testing-image4 {
+    width: 70%;
+    margin-left: 15%;
+    height: 70%;
+    margin-top: 15%;
+    border: 2px #c0392b solid;
+    border-radius: 5px;
+  }
+  
+  /*Footer*/
+  
+  footer {
+    margin-top: 30px;
+    background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+  
+  
+  .Footer-info {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    height: 450px;
+    text-align: center;
+    align-items: center;
+  }
+  
+  .Links{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    width: 20px;
+    row-gap: 20px;
+    margin-top: 10px;
+    line-height: 2em;
+    font-size: 35px;
+    padding-left: 20%;
+    }
+  
+  .Links a{
+    color: beige;
+    font-weight: 700;
+    text-decoration: none;
+    padding-top: 40px;
+  }
+  
+  .Links a:hover{
+    zoom: 1.2;
+  }
+  
+  .Socials{
+    color: beige;
+  }
+  
+  #twitter-logo, #facebook-logo, #instagram-logo {
+    height: 50px;
+    margin-top: 40px;
+    color: beige;
+  }
+  
+  #twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
+    zoom: 1.2;
+  }
+  
+  
+  .kart{
   color: beige;
-  font-weight: 700;
-  text-decoration: none;
-  padding-top: 40px;
+  }
+   
+  #adresse-kart{
+    height: 200px;
+    margin-top: 30px;  
+    border: none;
+  }
+  
+  #adresse-kart:hover{
+    zoom: 1.2;
+  }
 }
 
-.Links a:hover{
-  zoom: 1.2;
-}
-
-.Socials{
+@media screen and (max-width: 1000px) {
+  body {
+    background-color: beige;
+    height: 100%;
+    margin: 0;
+  }
+  
+  .Header-Image{
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/Nature.png);
+    height: 30vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+  }
+   
+  
+  .Tittel{
+    position: relative;
+    text-shadow: 5px 5px 10px black;
+    letter-spacing: 3px;
+    color:#c0392b;
+    font-size: 46px;
+    top: 20%;
+  }
+  
+  .navbar {
+    width: 100%;
+    line-height: 60px;
+    background-color: #c0392b;
+    text-align: center;
+    display: inline-block;
+    align-items: center;
+  }
+  
+  li {
+    list-style: none;
+    display: inline-block;
+  }
+  
+  .navbar a{
+    text-decoration: none;
+    font-size: 12px;
+    font-family: Cambria;
+    font-weight: 500;
+    color: beige;
+    padding: 10px;
+    letter-spacing: 2px;
+    margin-left: 15px;
+    margin-right: 15px;
+     
+  }
+  
+  .navbar a:hover{
+    background-color: white;
+    color: #130f40;
+    border-radius: 20px;
+    border-style: solid;
+  }
+  
+  /*Main*/
+  
+  .Innhold{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  
+  .Før_test{
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: end;
+  
+  }
+  
+  .Tekst{
+    width: 100%;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: justify;
+    margin-top: 30%;
+    font-size: 16px;
+    color: #c0392b;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 100;
+  }
+  
+  .Tekst h2{
+    text-align: center;
+    color: #c0392b;
+    font-size: 34px;
+    margin-bottom: 60px;
+  }
+  
+  .Testing-image1 {
+    width: 64%;
+    margin-left: 18%;
+    height: 44%;
+    margin-top: 28%;
+    border: 2px #c0392b solid;
+    border-radius: 5px;
+  }
+  
+  .Testing-image2 {
+    width: 64%;
+    margin-left: 18%;
+    height: 44%;
+    margin-top: 28%;
+    border: 2px #c0392b solid;
+    border-radius: 5px;
+  }
+  
+  
+  .Etter_test {
+    display: grid;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: end;
+  }
+  
+  .Testing-image3 {
+    width: 64%;
+    margin-left: 18%;
+    height: 44%;
+    margin-top: 28%;
+    border: 2px #c0392b solid;
+    border-radius: 5px;
+  }
+  
+  .Testing-image4 {
+    width: 64%;
+    margin-left: 18%;
+    height: 44%;
+    margin-top: 28%;
+    border: 2px #c0392b solid;
+    border-radius: 5px;
+  }
+  
+  /*Footer*/
+  
+  footer {
+    height: 400px;
+    background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+  
+  
+  .Footer-info {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    text-align: center;
+    align-items: baseline;
+  }
+  
+  .Links{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    width: 20px;
+    row-gap: 20px;
+    margin-top: 10px;
+    line-height: 2em;
+    font-size: 35px;
+    padding-left: 20%;
+    }
+  
+  .Links a{
+    color: beige;
+    font-weight: 600;
+    text-decoration: none;
+    padding-top: 36px;
+  }
+  
+  .Links a:hover{
+    zoom: 1.2;
+  }
+  
+  .Socials{
+    color: beige;
+    margin-top: 10px;
+  }
+  
+  #twitter-logo, #facebook-logo, #instagram-logo {
+    height: 40px;
+    margin-top: 25px;
+    color: beige;
+  }
+  
+  #twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
+    zoom: 1.2;
+  }
+  
+  
+  .kart{
   color: beige;
+  }
+   
+  #adresse-kart{
+    height: 75%;
+    width: 75%;
+    padding: 10px;
+    border: none;
+  }
+  
+  #adresse-kart:hover{
+    zoom: 1.2;
+  }
+  
 }
 
-#twitter-logo, #facebook-logo, #instagram-logo {
-  height: 50px;
-  margin-top: 40px;
+@media screen and (max-width: 420px) {
+  body {
+    background-color: beige;
+    height: 100%;
+    margin: 0;
+  }
+  
+  .Header-Image{
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/Nature.png);
+    height: 15vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+  }
+   
+  
+  .Tittel{
+    position: relative;
+    text-shadow: 5px 5px 10px black;
+    letter-spacing: 3px;
+    color:#c0392b;
+    font-size: 16px;
+    top: 20%;
+  }
+  
+  .navbar {
+    width: 100%;
+    line-height: 26px;
+    background-color: #c0392b;
+    text-align: center;
+    display: inline-block;
+    align-items: center;
+  }
+  
+  li {
+    list-style: none;
+    display: block;
+  }
+  
+  .navbar a{
+    text-decoration: none;
+    font-size: 8px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 100;
+    color: beige;
+    letter-spacing: 4px;
+    margin-left: 1px;
+    margin-right: 1px;
+     
+  }
+  
+  .navbar a:hover{
+    background-color: white;
+    color: #130f40;
+    border-radius: 20px;
+    border-style: solid;
+  }
+  
+  /*Main*/
+  
+  .Innhold{
+    display: grid;
+    grid-template-columns: 3fr 1fr ;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+  
+  .Før_test{
+    display: grid;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  
+  }
+  
+  .Tekst{
+    width: 70%;
+    height: 100%;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: end;
+    text-align: justify;
+    margin-top: 10%;
+    margin-left: 15%;
+    font-size: 16px;
+    color: #c0392b;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 100;
+  }
+  
+  .Tekst h2{
+    text-align: center;
+    color: #c0392b;
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  
+  .Testing-image1 {
+    width: 90%;
+    margin-left: 2%;
+    height: 50%;
+    margin-top: 25%;
+    border: 2px #c0392b solid;
+    border-radius: 5px;
+  }
+  
+  .Testing-image2 {
+    width: 90%;
+    margin-left: 2%;
+    height: 50%;
+    margin-top: 25%;
+    border: 2px #c0392b solid;
+    border-radius: 5px;
+  }
+  
+  
+  .Etter_test {
+    display: grid;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: end;
+  }
+  
+  .Testing-image3 {
+    width: 90%;
+    margin-left: 2%;
+    height: 50%;
+    margin-top: 25%;
+    border: 2px #c0392b solid;
+    border-radius: 5px;
+  }
+  
+  .Testing-image4 {
+    width: 90%;
+    margin-left: 2%;
+    height: 50%;
+    margin-top: 25%;
+    border: 2px #c0392b solid;
+    border-radius: 5px;
+  }
+  
+  /*Footer*/
+  
+  footer {
+    height: 420px;
+    margin-top: 40px;
+    background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+  
+  
+  .Footer-info {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    height: 300px;
+    text-align: center;
+    align-items: center;
+  }
+  
+  .Links{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    width: 20px;
+    row-gap: 20px;
+    line-height: 2em;
+    font-size: 18px;
+    padding-left: 15%;
+    }
+  
+  .Links a{
+    color: beige;
+    font-weight: 500;
+    text-decoration: none;
+    padding-top: 35px;
+  }
+  
+  .Links a:hover{
+    zoom: 1.2;
+  }
+  
+  .Socials{
+    color: beige;
+    font-size: 16px;
+  }
+  
+  #twitter-logo, #facebook-logo, #instagram-logo {
+    height: 30px;
+    margin-top: 20px;
+    color: beige;
+  }
+  
+  #twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
+    zoom: 1.2;
+  }
+  
+  
+  .kart{
   color: beige;
+  font-size: 10px;
+  padding-top: 20px;
+  }
+   
+  #adresse-kart{
+    height: 35%;
+    width: 80%;
+    margin-top: 10px;  
+    border: none;
+  }
+  
+  #adresse-kart:hover{
+    zoom: 1.2;
+  }
 }
-
-#twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
-  zoom: 1.2;
-}
-
-
-.kart{
-color: beige;
-}
- 
-#adresse-kart{
-  height: 200px;
-  margin-top: 30px;  
-  border: none;
-}
-
-#adresse-kart:hover{
-  zoom: 1.2;
-}
-
-
-
